--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -3,13 +3,13 @@
     <div class="form-field-container">
         <mat-form-field appearance="outline">
             <mat-label>First name</mat-label>
-            <input matInput placeholder="Placeholder">
+            <input [(ngModel)]="user.firstName" matInput placeholder="Placeholder">
             <mat-hint>First name</mat-hint>
           </mat-form-field>
 
           <mat-form-field appearance="outline">
             <mat-label>Last name</mat-label>
-            <input matInput placeholder="Placeholder">
+            <input [(ngModel)]="user.lastName" matInput placeholder="Placeholder">
             <mat-hint>Last name</mat-hint>
           </mat-form-field>
     </div>
@@ -17,7 +17,7 @@
     <div>
         <mat-form-field appearance="outline" class="full-width-form-field">
             <mat-label>Birth Date</mat-label>
-            <input matInput [matDatepicker]="picker">
+            <input [(ngModel)]="birthDate" matInput [matDatepicker]="picker">
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
@@ -27,7 +27,7 @@
     <div>
         <mat-form-field class="full-width-form-field" appearance="outline">
             <mat-label>Street & House no.</mat-label>
-            <input matInput placeholder="Placeholder">
+            <input [(ngModel)]="user.street" matInput placeholder="Placeholder">
             <mat-hint>Street & House no</mat-hint>
           </mat-form-field>
     </div>
@@ -35,13 +35,13 @@
     <div class="form-field-container">
           <mat-form-field appearance="outline">
             <mat-label>City</mat-label>
-            <input matInput placeholder="Placeholder">
+            <input [(ngModel)]="user.city" matInput placeholder="Placeholder">
             <mat-hint>City</mat-hint>
           </mat-form-field>
 
           <mat-form-field appearance="outline">
             <mat-label>Zip code</mat-label>
-            <input matInput placeholder="Placeholder">
+            <input [(ngModel)]="user.zipCode" matInput placeholder="Placeholder">
             <mat-hint>Zip code</mat-hint>
           </mat-form-field>
     </div>
@@ -50,7 +50,7 @@
 <div class="action-container">
     <mat-dialog-actions>
         <button mat-button >Cancel</button>
-        <button mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
+        <button (click)="saveNewUser()" mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
       </mat-dialog-actions>
 </div>
 
