--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,56 +1,59 @@
-<h2 mat-dialog-title>Add user</h2>
-<mat-dialog-content>
-    <div class="form-field-container">
-        <mat-form-field appearance="outline">
-            <mat-label>First name</mat-label>
-            <input [(ngModel)]="user.firstName" matInput placeholder="Placeholder">
-            <mat-hint>First name</mat-hint>
-          </mat-form-field>
-
+<div class="dialog-container">
+  <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+  <h2 mat-dialog-title>Add user</h2>
+  <mat-dialog-content>
+      <div class="form-field-container">
           <mat-form-field appearance="outline">
-            <mat-label>Last name</mat-label>
-            <input [(ngModel)]="user.lastName" matInput placeholder="Placeholder">
-            <mat-hint>Last name</mat-hint>
+              <mat-label>First name</mat-label>
+              <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="Placeholder">
+              <mat-hint>First name</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline">
+              <mat-label>Last name</mat-label>
+              <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="Placeholder">
+              <mat-hint>Last name</mat-hint>
+            </mat-form-field>
+      </div>
+
+      <div>
+          <mat-form-field appearance="outline" class="full-width-form-field">
+              <mat-label>Birth Date</mat-label>
+              <input [disabled]="loading" [(ngModel)]="birthDate" matInput [matDatepicker]="picker">
+              <mat-hint>MM/DD/YYYY</mat-hint>
+              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
-    </div>
+      </div>
 
-    <div>
-        <mat-form-field appearance="outline" class="full-width-form-field">
-            <mat-label>Birth Date</mat-label>
-            <input [(ngModel)]="birthDate" matInput [matDatepicker]="picker">
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-    </div>
+      <div>
+          <mat-form-field class="full-width-form-field" appearance="outline">
+              <mat-label>Street & House no.</mat-label>
+              <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="Placeholder">
+              <mat-hint>Street & House no</mat-hint>
+            </mat-form-field>
+      </div>
 
-    <div>
-        <mat-form-field class="full-width-form-field" appearance="outline">
-            <mat-label>Street & House no.</mat-label>
-            <input [(ngModel)]="user.street" matInput placeholder="Placeholder">
-            <mat-hint>Street & House no</mat-hint>
-          </mat-form-field>
-    </div>
+      <div class="form-field-container">
+            <mat-form-field appearance="outline">
+              <mat-label>City</mat-label>
+              <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="Placeholder">
+              <mat-hint>City</mat-hint>
+            </mat-form-field>
 
-    <div class="form-field-container">
-          <mat-form-field appearance="outline">
-            <mat-label>City</mat-label>
-            <input [(ngModel)]="user.city" matInput placeholder="Placeholder">
-            <mat-hint>City</mat-hint>
-          </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Zip code</mat-label>
+              <input [disabled]="loading" [(ngModel)]="user.zipCode" matInput placeholder="Placeholder">
+              <mat-hint>Zip code</mat-hint>
+            </mat-form-field>
+      </div>
+  </mat-dialog-content>
 
-          <mat-form-field appearance="outline">
-            <mat-label>Zip code</mat-label>
-            <input [(ngModel)]="user.zipCode" matInput placeholder="Placeholder">
-            <mat-hint>Zip code</mat-hint>
-          </mat-form-field>
-    </div>
-</mat-dialog-content>
-
-<div class="action-container">
-    <mat-dialog-actions>
-        <button mat-button >Cancel</button>
-        <button (click)="saveNewUser()" mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
-      </mat-dialog-actions>
+  <div class="action-container">
+      <mat-dialog-actions>
+          <button mat-button >Cancel</button>
+          <button (click)="saveNewUser()" mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
+        </mat-dialog-actions>
+  </div>
 </div>
 
