user table created

--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -52,7 +52,7 @@
   <div class="action-container">
       <mat-dialog-actions>
           <button mat-button >Cancel</button>
-          <button (click)="saveNewUser()" mat-button [mat-dialog-close]="" cdkFocusInitial>Save</button>
+          <button (click)="saveNewUser()" mat-button>Save</button>
         </mat-dialog-actions>
   </div>
 </div>
