--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,5 +54,6 @@ mat-toolbar-row, mat-toolbar {
 
 .router-container {
     padding-left: 56px;
+    padding-right: 56px;
     padding-top: 16px;
 }
