--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,7 @@
-<p>user works!</p>
+
+<mat-card appearance="outlined">
+    <mat-card-content>Simple card</mat-card-content>
+</mat-card>
 
 <button class="add-user-btn" color="primary" 
     (click)="openDialog()"
