--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,59 +1,74 @@
-<div class="dialog-container">
-  <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-  <h2 mat-dialog-title>Add user</h2>
-  <mat-dialog-content>
+<form [formGroup]="userForm">
+  <div class="dialog-container">
+    <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+    <h2 mat-dialog-title>Add user</h2>
+    <mat-dialog-content>
       <div class="form-field-container">
-          <mat-form-field appearance="outline">
-              <mat-label>First name</mat-label>
-              <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="Placeholder">
-              <mat-hint>First name</mat-hint>
-            </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>First name</mat-label>
+          <input [disabled]="loading" formControlName="firstName" matInput placeholder="Placeholder">
+          <mat-hint>First name</mat-hint>
+        </mat-form-field>
 
-            <mat-form-field appearance="outline">
-              <mat-label>Last name</mat-label>
-              <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="Placeholder">
-              <mat-hint>Last name</mat-hint>
-            </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Last name</mat-label>
+          <input [disabled]="loading" formControlName="lastName" matInput placeholder="Placeholder">
+          <mat-hint>Last name</mat-hint>
+        </mat-form-field>
       </div>
 
       <div>
-          <mat-form-field appearance="outline" class="full-width-form-field">
-              <mat-label>Birth Date</mat-label>
-              <input [disabled]="loading" [(ngModel)]="birthDate" matInput [matDatepicker]="picker">
-              <mat-hint>MM/DD/YYYY</mat-hint>
-              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
+        <mat-form-field appearance="outline" class="full-width-form-field">
+          <mat-label>Birth Date</mat-label>
+          <input [disabled]="loading" formControlName="birthDate" matInput [matDatepicker]="picker">
+          <mat-hint>MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </div>
+
+      <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input [disabled]="loading" type="email" matInput formControlName="email" 
+               placeholder="max.mustermann@gmail.com">
+        <mat-hint>Email</mat-hint>
+
+        @if (userForm.get('email')?.hasError('email')) {
+          <mat-error>Please enter a valid email address</mat-error>
+        }
+        @if (userForm.get('email')?.hasError('required')) {
+          <mat-error>Email is <strong>required</strong></mat-error>
+        }
+      </mat-form-field>
+
+      <div>
+        <mat-form-field appearance="outline" class="full-width-form-field">
+          <mat-label>Street & No.</mat-label>
+          <input [disabled]="loading" formControlName="street" matInput placeholder="Placeholder">
+          <mat-hint>Street & No.</mat-hint>
+        </mat-form-field>
+      </div> 
+
+      <div class="form-field-container">
+        <mat-form-field appearance="outline">
+          <mat-label>City</mat-label>
+          <input [disabled]="loading" formControlName="city" matInput placeholder="Placeholder">
+          <mat-hint>City</mat-hint>
+        </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Zip Code</mat-label>
+            <input [disabled]="loading" formControlName="zipCode" matInput placeholder="Placeholder">
+            <mat-hint>Zip Code</mat-hint>
           </mat-form-field>
       </div>
+    </mat-dialog-content>
 
-      <div>
-          <mat-form-field class="full-width-form-field" appearance="outline">
-              <mat-label>Street & House no.</mat-label>
-              <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="Placeholder">
-              <mat-hint>Street & House no</mat-hint>
-            </mat-form-field>
-      </div>
-
-      <div class="form-field-container">
-            <mat-form-field appearance="outline">
-              <mat-label>City</mat-label>
-              <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="Placeholder">
-              <mat-hint>City</mat-hint>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline">
-              <mat-label>Zip code</mat-label>
-              <input [disabled]="loading" [(ngModel)]="user.zipCode" matInput placeholder="Placeholder">
-              <mat-hint>Zip code</mat-hint>
-            </mat-form-field>
-      </div>
-  </mat-dialog-content>
-
-  <div class="action-container">
+    <div class="action-container">
       <mat-dialog-actions>
-          <button mat-button >Cancel</button>
-          <button (click)="saveNewUser()" mat-button>Save</button>
-        </mat-dialog-actions>
+        <button mat-button type="button">Cancel</button>
+        <button (click)="saveNewUser()" mat-button type="submit" [disabled]="userForm.invalid">Save</button>
+      </mat-dialog-actions>
+    </div>
   </div>
-</div>
-
+</form>
