--- a/src/app/dialog-add-user/dialog-add-user.component.scss
+++ b/src/app/dialog-add-user/dialog-add-user.component.scss
@@ -18,3 +18,13 @@
 .dialog-container {
     position: relative;
 }
+
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
