user table styled

--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -6,13 +6,13 @@
       <div class="form-field-container">
         <mat-form-field appearance="outline">
           <mat-label>First name</mat-label>
-          <input [disabled]="loading" formControlName="firstName" matInput placeholder="Placeholder">
+          <input [disabled]="loading" formControlName="firstName" matInput placeholder="first name">
           <mat-hint>First name</mat-hint>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
           <mat-label>Last name</mat-label>
-          <input [disabled]="loading" formControlName="lastName" matInput placeholder="Placeholder">
+          <input [disabled]="loading" formControlName="lastName" matInput placeholder="last name">
           <mat-hint>Last name</mat-hint>
         </mat-form-field>
       </div>
@@ -44,7 +44,7 @@
       <div>
         <mat-form-field appearance="outline" class="full-width-form-field">
           <mat-label>Street & No.</mat-label>
-          <input [disabled]="loading" formControlName="street" matInput placeholder="Placeholder">
+          <input [disabled]="loading" formControlName="street" matInput placeholder="street & no.">
           <mat-hint>Street & No.</mat-hint>
         </mat-form-field>
       </div> 
@@ -52,13 +52,13 @@
       <div class="form-field-container">
         <mat-form-field appearance="outline">
           <mat-label>City</mat-label>
-          <input [disabled]="loading" formControlName="city" matInput placeholder="Placeholder">
+          <input [disabled]="loading" formControlName="city" matInput placeholder="city">
           <mat-hint>City</mat-hint>
         </mat-form-field>
 
           <mat-form-field appearance="outline">
             <mat-label>Zip Code</mat-label>
-            <input [disabled]="loading" formControlName="zipCode" matInput placeholder="Placeholder">
+            <input [disabled]="loading" formControlName="zipCode" matInput placeholder="zip code">
             <mat-hint>Zip Code</mat-hint>
           </mat-form-field>
       </div>
