--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -3,3 +3,15 @@
   right: 56px;
   bottom: 56px;
 }
+
+.mat-mdc-row .mat-mdc-cell {
+  border-bottom: 1px solid transparent;
+  border-top: 1px solid transparent;
+  cursor: pointer;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+  border-color: #3F51B5;
+  background-color: rgba(0, 0, 0, 0.1);
+ 
+}
