--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
   <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-    <div class="logo-container">Platz für logo</div>
+    <div class="logo-container"><img src="../assets/img/logo.jpg" alt=""></div>
       <ul class="menu-items">
         <li routerLink="/dashboard" routerLinkActive="active"><mat-icon>fact_check</mat-icon> Dashboard</li>
         <li routerLink="/user" routerLinkActive="active"><mat-icon>perm_identity</mat-icon> User</li>
