--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,11 +13,15 @@
 
 .logo-container {
     border-bottom: 1px solid rgba(0, 0, 0, 0.06);
-    padding-left: 16px;
-    padding-right: 16px;
+    
     min-height: 64px;
     display: flex;
     align-items: center;
+    img {
+        height: 64px;
+        width: 300px;
+        object-fit: cover;
+    }
 }
 
 mat-toolbar-row, mat-toolbar {
