user detail view addeD

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,26 +1,25 @@
-
 <mat-card appearance="outlined">
     <mat-table [dataSource]="users$">
-        <!-- Name Column -->
         <ng-container matColumnDef="name">
             <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-            <mat-cell *matCellDef="let user"> {{user.lastName}} </mat-cell>
+            <mat-cell *matCellDef="let user">{{user.firstName}} {{user.lastName}}</mat-cell>
         </ng-container>
 
-        <!-- Email Column -->
+    
         <ng-container matColumnDef="email">
             <mat-header-cell *matHeaderCellDef> E-Mail </mat-header-cell>
             <mat-cell *matCellDef="let user"> {{user.email}} </mat-cell>
         </ng-container>
 
-        <!-- City Column -->
+      
         <ng-container matColumnDef="city">
             <mat-header-cell *matHeaderCellDef> City </mat-header-cell>
             <mat-cell *matCellDef="let user"> {{user.city}} </mat-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="['name', 'email', 'city']"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: ['name', 'email', 'city']"></mat-row>
+        <mat-row (click)="openUserDetail(row.id)"
+        *matRowDef="let row; columns: ['name', 'email', 'city']"></mat-row>
     </mat-table>
 </mat-card>
 
