--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -66,7 +66,7 @@
 
     <div class="action-container">
       <mat-dialog-actions>
-        <button mat-button type="button">Cancel</button>
+        <button (click)="dialogRef.close()" mat-button type="button">Cancel</button>
         <button (click)="saveNewUser()" mat-button type="submit" [disabled]="userForm.invalid">Save</button>
       </mat-dialog-actions>
     </div>
