--- a/src/app/dialog-add-user/dialog-add-user.component.scss
+++ b/src/app/dialog-add-user/dialog-add-user.component.scss
@@ -1,18 +1,26 @@
+mat-dialog-content {
+    overflow-y: hidden;
+} 
+
 .form-field-container {
     display: flex;
-    gap: 16px;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    gap: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 .full-width-form-field {
     width: 100%;
 }
 
+.half-width-form-field {
+    width: 50%;
+}
+
 .action-container {
     display: flex;
     gap: 16px;
-    padding-left: 16px;
+    padding-left: 16px; 
 }
 
 .dialog-container {
