--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,1 +1,42 @@
-<p>user-detail works!</p>
+<div class="user-detail-container">
+    <mat-card class="user-header-card">
+      <mat-card-content class="user-header">
+        <img class="user-avatar" src="assets/img/profile.png">
+        <div class="user-info">
+          <h1>{{user.firstName}} {{user.lastName}}</h1>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  
+    <mat-card class="user-details-card">
+      <mat-card-header>
+        <mat-card-title><Address></Address></mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="details-grid">
+         
+          <div class="detail-item">
+            <span class="detail-label">City</span>
+            <span class="detail-value">{{user.city}}</span>
+          </div>
+          <div class="detail-item">
+            <span class="detail-label">Street</span>
+            <span class="detail-value">{{user.street}}</span>
+          </div>
+          <div class="detail-item">
+            <span class="detail-label">Zip Code</span>
+            <span class="detail-value">{{user.zipCode}}</span>
+          </div>
+          <div class="detail-item">
+            <span class="detail-label">Birth Date</span>
+            <span class="detail-value">{{user.birthDate | date:'mediumDate'}}</span>
+          </div>
+
+          <div class="detail-item">
+            <span class="detail-label">Email</span>
+            <span class="detail-value">{{user.email}}</span>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
