--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
 <p>dashboard works!</p>
+<button class="add-deal-btn" color="primary" 
+    
+    mat-fab aria-label="Example icon button with a delete icon"
+    [matTooltipPosition]="position"
+    matTooltip="New deal">
+    <mat-icon>add</mat-icon>
+</button>
