--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -7,3 +7,9 @@
   .example-full-width {
     width: 100%;
   }
+
+  .add-deal-btn {
+    position: absolute;
+    right: 56px;
+    bottom: 56px;
+  }
