--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -5,16 +5,14 @@
             <mat-cell *matCellDef="let user">{{user.firstName}} {{user.lastName}}</mat-cell>
         </ng-container>
 
-    
         <ng-container matColumnDef="email">
-            <mat-header-cell *matHeaderCellDef> E-Mail </mat-header-cell>
-            <mat-cell *matCellDef="let user"> {{user.email}} </mat-cell>
+            <mat-header-cell *matHeaderCellDef> Company </mat-header-cell>
+            <mat-cell *matCellDef="let user"> {{user.companyId}} </mat-cell>
         </ng-container>
 
-      
         <ng-container matColumnDef="city">
             <mat-header-cell *matHeaderCellDef> City </mat-header-cell>
-            <mat-cell *matCellDef="let user"> {{user.city}} </mat-cell>
+            <mat-cell *matCellDef="let user"> {{user.position}} </mat-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
