--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,9 +1,14 @@
 <form [formGroup]="userForm">
   <div class="dialog-container">
     <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-    <h2 mat-dialog-title>Add user</h2>
+    <mat-card class="user-header-card">
+      <mat-card-content class="user-header">
+        <div class="user-info">
+          <h1>Create new user</h1>
+        </div>
+      </mat-card-content>
+    </mat-card>
     <mat-dialog-content>
-
       <div class="form-field-container">
         <mat-form-field appearance="outline" class="half-width-form-field">
           <mat-label>First name</mat-label>
@@ -84,11 +89,10 @@
           
       </div>
     </mat-dialog-content>
-
     <div class="action-container">
       <mat-dialog-actions>
         <button (click)="dialogRef.close()" mat-button type="button">Cancel</button>
-        <button (click)="saveNewUser()" mat-button type="submit" [disabled]="userForm.invalid || loading">Save</button>
+        <button (click)="saveNewUser()" mat-button type="submit">Save</button>
       </mat-dialog-actions>
     </div>
   </div>
