--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <p>dashboard works!</p>
 <button class="add-deal-btn" color="primary" 
-    
+    (click)="openDialog()"
     mat-fab aria-label="Example icon button with a delete icon"
     [matTooltipPosition]="position"
     matTooltip="New deal">
